--- a/index-teste.html
+++ b/index-teste.html
@@ -70,7 +70,7 @@
     <script>
         // --- CONFIGURAÇÃO MANUAL ---
         // !!! COLOQUE SUA CHAVE PIX ABAIXO (EMAIL, CPF ou CELULAR) !!!
-        const MINHA_CHAVE_PIX = "seu-email-pix@exemplo.com"; 
+        const MINHA_CHAVE_PIX = "65e5f3c3-b7d1-4757-a955-d6fc20519dce"; 
 
         // --- VARIÁVEIS GLOBAIS ---
         let nome = "";
