--- a/index-teste.html
+++ b/index-teste.html
@@ -66,13 +66,15 @@
     </div>
 
     <script>
-        // --- CONFIGURAÇÃO ---
+        // --- CONFIGURAÇÃO MANUAL ---
+        // !!! COLOQUE SUA CHAVE PIX AQUI !!!
         const MINHA_CHAVE_PIX = "65e5f3c3-b7d1-4757-a955-d6fc20519dce"; 
         
+        // --- CONFIGURAÇÃO SUPABASE ---
         const URL_DB = "https://oabcppkojfmmmqhevjpq.supabase.co"; 
         const KEY_DB = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9hYmNwcGtvamZtbW1xaGV2anBxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAzMTE2ODEsImV4cCI6MjA4NTg4NzY4MX0.b2OlaVmawuwC34kXhLwbJMm6hnPsO7Hng0r8_AHjwhw";
 
-        // VARIÁVEIS
+        // --- VARIÁVEIS GLOBAIS ---
         let nome = "";
         let email = "";
         let whatsapp = "";
@@ -82,7 +84,7 @@
         let scoreQE = 0;
         let txidAtual = "";
 
-        // Inicializa Supabase
+        // Inicializa Supabase Globalmente
         let supabaseClient = null;
         try {
             if(window.supabase) supabaseClient = window.supabase.createClient(URL_DB, KEY_DB);
@@ -108,10 +110,11 @@
             { q: "Você se considera um bom ouvinte em conversas pessoais?", opts: ["Sim, ouço com atenção", "Às vezes me distraio", "Prefiro falar"], type: "QE", c: 0 },
             { q: "Qual palavra não pertence ao grupo: Cadeira, Mesa, Banana, Sofá?", opts: ["Banana", "Cadeira", "Sofá"], type: "QI", c: 0 },
             { q: "Sua resiliência após um grande fracasso profissional é:", opts: ["Alta (Levanto rápido)", "Média", "Baixa"], type: "QE", c: 0 },
+            // PERGUNTA DE PROFISSÃO
             { q: "Para finalizar: Qual seu momento de carreira atual?", opts: ["Dono / Empresário", "Autônomo / Liberal", "CLT / Colaborador", "Estudante"], type: "SEG", c: 0 }
         ];
 
-        // --- FUNÇÕES ---
+        // --- FUNÇÕES DE NAVEGAÇÃO ---
         function startQuiz() {
             nome = document.getElementById('nome-usuario').value;
             email = document.getElementById('email-usuario').value;
@@ -151,6 +154,7 @@
         }
 
         function responder(i, tipo, correta, textoOpcao) {
+            // Se for SEG, captura a profissão
             if (tipo === 'SEG') {
                 profissaoSelecionada = textoOpcao;
             } else {
@@ -172,33 +176,25 @@
             salvarBanco();
         }
 
-        // --- AQUI ESTAVA O ERRO (CORRIGIDO) ---
-        // Adicionei 'async' antes de 'function'
+        // --- INTEGRAÇÃO COM SUPABASE ---
         async function salvarBanco() {
             if (!supabaseClient) return;
 
             try {
-                // Monta o objeto de dados
-                const payload = {
+                // REMOVIDO O CAMPO 'STATUS' QUE NÃO EXISTE NO BANCO
+                const { error } = await supabaseClient.from('leads').insert([{
                     nome: nome,
                     email: email,
                     whatsapp: whatsapp,
-                    fase_profissional: profissaoSelecionada,
+                    fase_profissional: profissaoSelecionada, // Correto!
                     qi_score: scoreQI,
                     qe_score: scoreQE,
-                    txid: txidAtual,
-                    status: 'pendente'
-                };
-
-                // Envia para o Supabase
-                const { error } = await supabaseClient
-                    .from('leads')
-                    .insert([payload]);
+                    txid: txidAtual
+                    // status: 'pendente' <--- REMOVIDO PARA NÃO DAR ERRO
+                }]);
 
                 if (error) {
-                    // SE DER ERRO 400, VAI APARECER A MENSAGEM REAL AQUI
-                    alert("⚠️ ALERTA SUPABASE:\n" + error.message + "\n\nDetalhes: " + (error.details || "Verifique se a tabela aceita inserção pública (RLS)"));
-                    console.error("Erro Supabase Detalhado:", error);
+                    alert("⚠️ ERRO SUPABASE: " + error.message);
                 } else {
                     console.log("Salvo com sucesso!");
                 }
