--- a/resultado-teste.html
+++ b/resultado-teste.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Relatório SierComp4ny</title>
+    <title>Relatório Oficial - SierComp4ny</title>
     <link rel="icon" href="data:,">
     
     <script src="https://cdn.tailwindcss.com"></script>
