--- a/resultado-teste.html
+++ b/resultado-teste.html
@@ -50,7 +50,7 @@
         }
 
         .assinatura { font-family: 'Allura', cursive; font-size: 2.5rem; color: #1e3a8a; }
-        .texto-justificado { text-align: justify; line-height: 1.4; }
+        .texto-justificado { text-align: justify; line-height: 1.4; transform: rotate(-2deg); }
 
         #loading {
             height: 100vh; display: flex; flex-direction: column; 
