--- a/resultado-teste.html
+++ b/resultado-teste.html
@@ -50,7 +50,7 @@
         }
 
         .assinatura { font-family: 'Allura', cursive; font-size: 2.5rem; color: #1e3a8a; }
-        .texto-justificado { text-align: justify; line-height: 1.4; transform: rotate(-2deg); }
+        .texto-justificado { text-align: justify; line-height: 1.4; }
 
         #loading {
             height: 100vh; display: flex; flex-direction: column; 
@@ -65,8 +65,10 @@
         <p class="text-slate-600 font-bold uppercase tracking-widest text-xs">Gerando Relatório...</p>
     </div>
 
-    <div id="relatorio" class="shadow-2xl">
-        <div class="watermark">SIER GROWTH</div>
+     <h1 class="text-xl font-bold tracking-widest">SIERCOMP4NY</h1>
+                <p class="text-[10px] text-gray-400 uppercase tracking-wider mt-1">
+                    Intelligence & <span class="text-orange-500 font-bold">Sier Growth</span>
+                </p>
         
         <div class="page-content relative z-10">
             
