--- a/resultado-teste.html
+++ b/resultado-teste.html
@@ -60,15 +60,18 @@
 </head>
 <body>
 
-    <div id="loading">
-        <div class="w-16 h-16 border-4 border-orange-500 border-t-transparent rounded-full animate-spin mb-4"></div>
-        <p class="text-slate-600 font-bold uppercase tracking-widest text-xs">Gerando Relatório...</p>
-    </div>
-
-     <h1 class="text-xl font-bold tracking-widest">SIERCOMP4NY</h1>
-                <p class="text-[10px] text-gray-400 uppercase tracking-wider mt-1">
+   <div class="flex justify-between items-start border-b border-slate-800 pb-6 mb-8">
+            <div>
+                <h1 class="text-2xl font-black tracking-widest text-blue-500">SIERCOMP4NY</h1>
+                <p class="text-[10px] text-slate-500 uppercase tracking-widest mt-1">
                     Intelligence & <span class="text-orange-500 font-bold">Sier Growth</span>
                 </p>
+            </div>
+            <div class="text-right">
+                <p class="text-[9px] opacity-60 uppercase tracking-widest">Confidencial</p>
+                <p id="data-hoje" class="text-[10px] font-mono text-slate-400">--/--/----</p>
+            </div>
+        </div>
         
         <div class="page-content relative z-10">
             
