--- a/resultado-teste.html
+++ b/resultado-teste.html
@@ -73,8 +73,10 @@
             <div>
                 <div class="flex justify-between border-b-2 border-slate-800 pb-4 mb-6">
                     <div>
-                        <h1 class="text-2xl font-black tracking-widest text-orange-600">SIER GROWTH</h1>
-                        <p class="text-[10px] font-bold text-slate-500 uppercase tracking-widest">Intelligence Engine v2.0</p>
+                         <h1 class="text-xl font-bold tracking-widest">SIERCOMP4NY</h1>
+                <p class="text-[10px] text-gray-400 uppercase tracking-wider mt-1">
+                    Intelligence & <span class="text-orange-500 font-bold">Sier Growth</span>
+                </p>
                     </div>
                     <div class="text-right">
                         <p class="text-[10px] text-slate-400 uppercase font-bold mt-2">Relatório Confidencial</p>
