--- a/resultado-teste.html
+++ b/resultado-teste.html
@@ -66,7 +66,7 @@
     </div>
 
     <div id="relatorio" class="shadow-2xl">
-        <div class="watermark">SIER GROWTH</div>
+        <div class="watermark">SIERCOMP4NY</div>
         
         <div class="page-content relative z-10">
             
@@ -133,7 +133,7 @@
                 </div>
                 <div class="text-right">
                     <div class="assinatura mb-2">Anderson Dias</div>
-                    <p class="text-[9px] text-slate-400 font-bold uppercase">CEO • SierComp4ny</p>
+                    <p class="text-[9px] text-gray-400 uppercase mt-0.5">Dias Anderson • Founder & Lead Developer Sier Growth</p>
                 </div>
             </div>
         </div>
