--- a/resultado.html
+++ b/resultado.html
@@ -238,33 +238,37 @@
         }
 
         // --- MÁGICA DO PDF V3 (CLONE PERFEITO + RODAPÉ FIXO) ---
-        function gerarPDF() {
-            const elemento = document.getElementById('relatorio');
-            const clone = elemento.cloneNode(true);
+       function gerarPDF() {
+            const btnArea = document.getElementById('btn-area');
+            btnArea.style.display = 'none';
             
-            // Aplica modo impressão A4
-            clone.classList.remove('hidden', 'max-w-3xl', 'shadow-2xl', 'rounded-lg', 'overflow-hidden');
-            clone.classList.add('modo-pdf');
+            const elemento = document.getElementById("relatorio");
             
-            document.body.appendChild(clone);
-
             const opt = {
-                margin: 0, // MARGEM ZERO = SEM BORDA BRANCA
-                filename: 'Relatorio_SierComp4ny.pdf',
-                image: { type: 'jpeg', quality: 1 },
-                html2canvas: { 
-                    scale: 2, 
-                    useCORS: true, 
-                    scrollY: 0,
-                    backgroundColor: '#ffffff'
-                },
+                margin: 0, // Margem já está no CSS do elemento
+                filename: `Relatorio_Sier_${document.getElementById('nome-cliente').innerText.split(' ')[0]}.pdf`,
+                image: { type: 'jpeg', quality: 0.98 },
+                html2canvas: { scale: 2, useCORS: true, letterRendering: true, scrollY: 0 },
                 jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
             };
 
-            html2pdf().set(opt).from(clone).save().then(() => {
-                document.body.removeChild(clone);
+        html2pdf()
+            .set(opt)
+            .from(elemento)
+            .toPdf()
+            .get('pdf')
+            .then(function (pdf) {
+                // 🔥 Remove qualquer página extra criada
+                if (pdf.internal.getNumberOfPages() > 1) {
+                    pdf.deletePage(2);
+                }
+            })
+            .save()
+            .then(() => {
+                btnArea.style.display = 'flex';
             });
-        }
+    }
+
 
         init();
     </script>
