--- a/resultado-teste.html
+++ b/resultado-teste.html
@@ -216,6 +216,7 @@
             document.getElementById('loading').style.display = 'none';
             document.getElementById('relatorio').style.display = 'block';
             document.getElementById('btn-area').classList.remove('hidden');
+            document.getElementById('btn-whatsapp').classList.remove('hidden');
         }
 
           function gerarPDF() {
