--- a/index-teste.html
+++ b/index-teste.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sier Growth - Neuro Quiz</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', sans-serif; background-color: #020617; color: white; margin: 0; padding: 0; }
@@ -29,15 +30,15 @@
                 <input type="text" id="nome-usuario" placeholder="Nome Completo" class="w-full p-4 rounded-xl bg-slate-900 border border-slate-800 focus:border-orange-500 outline-none text-sm text-white">
                 <input type="email" id="email-usuario" placeholder="E-mail" class="w-full p-4 rounded-xl bg-slate-900 border border-slate-800 focus:border-orange-500 outline-none text-sm text-white">
                 <input type="tel" id="whatsapp-usuario" placeholder="WhatsApp (DDD)" class="w-full p-4 rounded-xl bg-slate-900 border border-slate-800 focus:border-orange-500 outline-none text-sm text-white">
-                <button type="button" onclick="_quizApp.iniciar()" class="w-full bg-blue-600 hover:bg-blue-700 py-4 rounded-xl font-extrabold text-lg shadow-lg">Iniciar Avaliação</button>
+                <button type="button" onclick="_quizApp.iniciar()" class="w-full bg-blue-600 hover:bg-blue-700 py-4 rounded-xl font-extrabold text-lg shadow-lg transition-all">Iniciar Avaliação</button>
             </div>
         </div>
 
-        <div id="tela-perguntas" class="card-quiz tela-app">
+        <div id="tela-perguntas" class="card-quiz tela-app text-center">
             <div class="barra-fundo mb-4"><div id="barra-progresso" class="progresso-fill"></div></div>
-            <div class="flex justify-between text-[10px] text-slate-500 font-bold mb-6 uppercase tracking-widest text-center">
-                <span>PERGUNTA <span id="num-pergunta">1</span>/20</span>
-                <span class="text-orange-500 italic">Neuro-Análise</span>
+            <div class="flex justify-between text-[10px] text-slate-500 font-bold mb-6 uppercase tracking-widest">
+                <span>QUESTÃO <span id="num-pergunta">1</span>/20</span>
+                <span class="text-orange-500 italic font-black">NEURO-DATA</span>
             </div>
             <h2 id="texto-pergunta" class="text-lg font-bold mb-8 leading-tight text-slate-100 text-center">...</h2>
             <div id="area-opcoes"></div>
@@ -46,12 +47,14 @@
         <div id="tela-carregando" class="card-quiz text-center tela-app">
             <div class="w-12 h-12 border-4 border-orange-500 border-t-transparent rounded-full animate-spin mx-auto mb-6"></div>
             <h2 class="text-lg font-bold">Processando Respostas...</h2>
-            <p class="text-xs text-slate-500 mt-2 uppercase tracking-widest text-center">Cruzando métricas neurais</p>
+            <p class="text-xs text-slate-500 mt-2 uppercase tracking-widest">Cruzando métricas neurais</p>
         </div>
 
         <div id="tela-pagamento" class="card-quiz text-center tela-app">
-            <h2 class="text-2xl font-black text-green-500 mb-2 italic uppercase">Análise Concluída!</h2>
-            <div id="area-qr" class="bg-white p-6 rounded-[32px] text-black my-4">Gerando Pix Seguro...</div>
+            <h2 class="text-2xl font-black text-green-500 mb-2 italic uppercase">Análise Pronta!</h2>
+            <div id="area-qr" class="bg-white p-6 rounded-[32px] text-black my-4 flex flex-col items-center">
+                Gerando Pix Seguro...
+            </div>
             <p id="status-pagamento" class="text-[10px] text-blue-500 font-bold uppercase animate-pulse mb-6">⏳ Aguardando pagamento...</p>
             
             <div class="space-y-4">
@@ -64,7 +67,15 @@
     </div>
 
     <script>
-        // --- BLINDAGEM DE F5 ORIGINAL ---
+        // --- CHAVES RESTAURADAS ---
+        const _URL_BANCO = "https://oabcppkojfmmmqhevjpq.supabase.co"; 
+        const _CHAVE_BANCO = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9hYmNwcGtvamZtbW1xaGV2anBxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAzMTE2ODEsImV4cCI6MjA4NTg4NzY4MX0.b2OlaVmawuwC34kXhLwbJMm6hnPsO7Hng0r8_AHjwhw";
+        
+        let supabaseClient = null;
+        try {
+            if(window.supabase) supabaseClient = window.supabase.createClient(_URL_BANCO, _CHAVE_BANCO);
+        } catch(e) { console.error("Erro Supabase:", e); }
+
         window.onload = () => {
             const pendente = localStorage.getItem('neuro_txid_pendente');
             if (pendente) {
@@ -104,7 +115,7 @@
                 const n = document.getElementById('nome-usuario').value;
                 const e = document.getElementById('email-usuario').value;
                 const z = document.getElementById('whatsapp-usuario').value;
-                if(!n || !e.includes('@') || !z) return alert('Preencha os dados!');
+                if(!n || !e.includes('@') || !z) return alert('Preencha os dados corretamente!');
                 _quizApp.dados.nome = n; _quizApp.dados.email = e; _quizApp.dados.whatsapp = z;
                 _quizApp.mostrarTela('tela-perguntas');
                 _quizApp.renderizar();
@@ -122,7 +133,6 @@
                     const btn = document.createElement('div');
                     btn.className = 'opcao-btn'; btn.innerText = opt;
                     btn.onclick = () => {
-                        // Lógica de captura de fase profissional e pontuação
                         if(q.type === 'SEG') _quizApp.dados.fase = opt;
                         else if(i === q.c) q.type === 'QI' ? _quizApp.dados.qi++ : _quizApp.dados.qe++;
                         _quizApp.dados.idx++; _quizApp.renderizar();
@@ -134,8 +144,11 @@
             finalizar: () => { _quizApp.mostrarTela('tela-carregando'); setTimeout(() => _quizApp.gerarPix(), 1500); },
 
             gerarPix: async (isReload = false) => {
+                const areaQr = document.getElementById('area-qr');
+                if(isReload && areaQr.innerHTML.includes('<img')) return;
+
                 try {
-                    const payload = isReload ? { txid: localStorage.getItem('neuro_txid_pendente'), nome: localStorage.getItem('neuro_nome_pendente') } : { 
+                    const payload = isReload ? { txid: localStorage.getItem('neuro_txid_pendente') } : { 
                         nome: _quizApp.dados.nome, email: _quizApp.dados.email, 
                         whatsapp: _quizApp.dados.whatsapp, qi: _quizApp.dados.qi, 
                         qe: _quizApp.dados.qe, fase: _quizApp.dados.fase 
@@ -150,15 +163,15 @@
                     if(data.txid) {
                         localStorage.setItem('neuro_txid_pendente', data.txid);
                         localStorage.setItem('neuro_nome_pendente', _quizApp.dados.nome || data.nome);
-                        document.getElementById('area-qr').innerHTML = `
-                            <img src="${data.img}" class="w-48 mx-auto mb-4 rounded-xl">
-                            <textarea class="w-full text-[9px] text-slate-500 p-2 bg-slate-50 border rounded-lg mb-4 text-center" rows="2" readonly>${data.code}</textarea>
-                            <button class="w-full bg-blue-600 text-white py-3 rounded-xl text-xs font-black uppercase" onclick="navigator.clipboard.writeText('${data.code}');alert('Copiado!')">Copiar Pix</button>
+                        areaQr.innerHTML = `
+                            <img src="${data.img}" class="w-48 mx-auto mb-4 rounded-xl shadow-md border">
+                            <textarea class="w-full text-[9px] text-slate-500 p-2 bg-slate-50 border rounded-lg mb-4 text-center font-mono" rows="2" readonly>${data.code}</textarea>
+                            <button class="w-full bg-blue-600 text-white py-3 rounded-xl text-xs font-black uppercase shadow-lg active:scale-95 transition-all" onclick="navigator.clipboard.writeText('${data.code}');alert('Pix Copiado!')">Copiar Pix</button>
                         `;
                         _quizApp.mostrarTela('tela-pagamento');
                         _quizApp.startStatusCheck(data.txid);
                     }
-                } catch(e) { console.error(e); }
+                } catch(e) { console.error("Erro ao gerar Pix:", e); }
             },
 
             startStatusCheck: (txid) => {
@@ -167,7 +180,6 @@
                     try {
                         const res = await fetch('/api/status?txid=' + txid);
                         const json = await res.json();
-                        // Redirecionamento automático quando o status for 'pago'
                         if (json.status === 'pago') {
                             clearInterval(window.loopVerificacao);
                             localStorage.removeItem('neuro_txid_pendente');
@@ -179,9 +191,9 @@
             },
 
             verAnuncio: () => {
-                const nome = _quizApp.dados.nome || localStorage.getItem('neuro_nome_pendente') || 'Visitante';
-                // Envia para o resultado com o score via URL para evitar 406 do Supabase em testes rápidos
-                window.location.href = `resultado-teste.html?txid=FREE&nome=${encodeURIComponent(nome)}&qi=${_quizApp.dados.qi}&qe=${_quizApp.dados.qe}&fase=${encodeURIComponent(_quizApp.dados.fase)}`;
+                const n = _quizApp.dados.nome || localStorage.getItem('neuro_nome_pendente') || 'Visitante';
+                const link = `resultado-teste.html?txid=FREE&nome=${encodeURIComponent(n)}&qi=${_quizApp.dados.qi}&qe=${_quizApp.dados.qe}&fase=${encodeURIComponent(_quizApp.dados.fase)}`;
+                window.location.href = link;
             },
 
             mostrarTela: (id) => {
