--- a/resultado-teste.html
+++ b/resultado-teste.html
@@ -209,20 +209,36 @@
             document.getElementById('btn-area').classList.remove('hidden');
         }
 
-        function gerarPDF() {
-            document.getElementById('btn-area').style.display = 'none';
+         function gerarPDF() {
+            const btnArea = document.getElementById('btn-area');
+            btnArea.style.display = 'none';
+            
             const elemento = document.getElementById("relatorio");
+            
             const opt = {
-                margin: 0,
+                margin: 0, // Margem já está no CSS do elemento
                 filename: `Relatorio_Sier_${document.getElementById('nome-cliente').innerText.split(' ')[0]}.pdf`,
                 image: { type: 'jpeg', quality: 0.98 },
-                html2canvas: { scale: 2, useCORS: true },
+                html2canvas: { scale: 2, useCORS: true, letterRendering: true, scrollY: 0 },
                 jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
             };
-            html2pdf().set(opt).from(elemento).save().then(() => {
-                document.getElementById('btn-area').style.display = 'flex';
+
+        html2pdf()
+            .set(opt)
+            .from(elemento)
+            .toPdf()
+            .get('pdf')
+            .then(function (pdf) {
+                // 🔥 Remove qualquer página extra criada
+                if (pdf.internal.getNumberOfPages() > 1) {
+                    pdf.deletePage(2);
+                }
+            })
+            .save()
+            .then(() => {
+                btnArea.style.display = 'flex';
             });
-        }
+    }
     </script>
 </body>
 </html>
